<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_dialog_fragment_first_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:hint="@string/first_name"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_dialog_fragment_last_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:hint="@string/last_name"
        android:padding="5dp" />

    <RadioGroup
        android:id="@+id/edit_dialog_fragment_gender_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2" >

        <RadioButton
            android:id="@+id/edit_dialog_fragment_male_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/edit_dialog_fragment_female_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/gender_female" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_dialog_fragment_phone_number_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:inputType="phone"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit_dialog_fragment_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/edit" />

        <Button
            android:id="@+id/edit_dialog_fragment_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/edit_dialog_fragment_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>